force-app/main/default/objects/litify_pm__Intake__c/fields/Are_you_a_member_of_a_union__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_member_of_a_union__c</fullName>
    <label>Union Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>