force-app/main/default/objects/litify_pm__Intake__c/fields/Are_you_still_being_treated_for_this_inj__c.field-meta.xml
<CustomField>
    <fullName>Are_you_still_being_treated_for_this_inj__c</fullName>
    <label>Are you still being treated for this inj</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>