force-app/main/default/objects/litify_pm__Intake__c/fields/Attorney_Client_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Client_Meeting__c</fullName>
    <label>Attorney-Client Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>