force-app/main/default/objects/litify_pm__Intake__c/fields/Body_parts_injured__c.field-meta.xml
<CustomField>
    <fullName>Body_parts_injured__c</fullName>
    <label>Body parts injured</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Right Arm</fullName>
            </value>
            <value>
                <fullName>Left Arm</fullName>
            </value>
            <value>
                <fullName>Right Shoulder</fullName>
            </value>
            <value>
                <fullName>Left Shoulder</fullName>
            </value>
            <value>
                <fullName>Right Elbow</fullName>
            </value>
            <value>
                <fullName>Left Elbow</fullName>
            </value>
            <value>
                <fullName>Right Hand/Wrist</fullName>
            </value>
            <value>
                <fullName>Right Fingers</fullName>
            </value>
            <value>
                <fullName>Left Hand/Wrist</fullName>
            </value>
            <value>
                <fullName>Left Fingers</fullName>
            </value>
            <value>
                <fullName>Right Leg</fullName>
            </value>
            <value>
                <fullName>Left Leg</fullName>
            </value>
            <value>
                <fullName>Right Hip</fullName>
            </value>
            <value>
                <fullName>Left Hip</fullName>
            </value>
            <value>
                <fullName>Right Knee</fullName>
            </value>
            <value>
                <fullName>Left Knee</fullName>
            </value>
            <value>
                <fullName>Right Foot/Ankle</fullName>
            </value>
            <value>
                <fullName>Left Foot/Ankle</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Brain</fullName>
            </value>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Right Eye</fullName>
            </value>
            <value>
                <fullName>Left Eye</fullName>
            </value>
            <value>
                <fullName>Right Ear (Hearing Loss)</fullName>
            </value>
            <value>
                <fullName>Left Ear (Hearing Loss)</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>TBI</fullName>
            </value>
            <value>
                <fullName>PTSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>