force-app/main/default/objects/litify_pm__Intake__c/fields/Client_is_a__c.field-meta.xml
<CustomField>
    <fullName>Client_is_a__c</fullName>
    <label>Client is a</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Pedestrian</fullName>
            </value>
            <value>
                <fullName>Bicyclist</fullName>
            </value>
            <value>
                <fullName>Motorcyclist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>