force-app/main/default/objects/litify_pm__Intake__c/fields/Concurrent_Employer_Lost_Time__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Employer_Lost_Time__c</fullName>
    <label>Concurrent Employer - Lost Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>