force-app/main/default/objects/litify_pm__Intake__c/fields/Concurrent_Employers__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Employers__c</fullName>
    <label>Concurrent Employers</label>
    <type>TextArea</type>
</CustomField>