force-app/main/default/objects/litify_pm__Intake__c/fields/Current_Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Work_Status__c</fullName>
    <label>Current Work Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Working (Reduced Earnings)</fullName>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
            <value>
                <fullName>Not Working (Unrelated)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>