force-app/main/default/objects/litify_pm__Intake__c/fields/Date_Hired__c.field-meta.xml
<CustomField>
    <fullName>Date_Hired__c</fullName>
    <label>Date Hired</label>
    <type>Date</type>
</CustomField>