force-app/main/default/objects/litify_pm__Intake__c/fields/Date_of_notice_given__c.field-meta.xml
<CustomField>
    <fullName>Date_of_notice_given__c</fullName>
    <label>Date of notice given</label>
    <type>Date</type>
</CustomField>