force-app/main/default/objects/litify_pm__Intake__c/fields/Description_of_Prior_Injuries__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Prior_Injuries__c</fullName>
    <label>Description of Prior Injuries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>