force-app/main/default/objects/litify_pm__Intake__c/fields/Description_of_Prior_Lawsuits__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Prior_Lawsuits__c</fullName>
    <label>Description of Prior Lawsuits</label>
    <length>15258</length>
    <type>LongTextArea</type>
</CustomField>