force-app/main/default/objects/litify_pm__Intake__c/fields/Did_anyone_see_your_injury_happen__c.field-meta.xml
<CustomField>
    <fullName>Did_anyone_see_your_injury_happen__c</fullName>
    <label>Did anyone see your injury happen?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>