force-app/main/default/objects/litify_pm__Intake__c/fields/Did_police_come_to_the_scene__c.field-meta.xml
<CustomField>
    <fullName>Did_police_come_to_the_scene__c</fullName>
    <label>Did police come to the scene?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>