force-app/main/default/objects/litify_pm__Intake__c/fields/Did_the_Police_pl__c.field-meta.xml
<CustomField>
    <fullName>Did_the_Police_pl__c</fullName>
    <label>Did the Police come to the scene?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>