force-app/main/default/objects/litify_pm__Intake__c/fields/Did_you_receive_any_tips__c.field-meta.xml
<CustomField>
    <fullName>Did_you_receive_any_tips__c</fullName>
    <label>Did you receive any tips/lodging?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>