force-app/main/default/objects/litify_pm__Intake__c/fields/Did_you_seek_any_medical_treatment_after__c.field-meta.xml
<CustomField>
    <fullName>Did_you_seek_any_medical_treatment_after__c</fullName>
    <label>Did you seek any medical treatment after</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>