force-app/main/default/objects/litify_pm__Intake__c/fields/Did_you_stop_working__c.field-meta.xml
<CustomField>
    <fullName>Did_you_stop_working__c</fullName>
    <label>Did you stop working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>