force-app/main/default/objects/litify_pm__Intake__c/fields/Do_you_have_a_copy_of_the_police_report__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_copy_of_the_police_report__c</fullName>
    <label>Do you have a copy of the police report?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>