force-app/main/default/objects/litify_pm__Intake__c/fields/Do_you_remember_having_another_injury_to__c.field-meta.xml
<CustomField>
    <fullName>Do_you_remember_having_another_injury_to__c</fullName>
    <label>Do you remember having another injury to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>