force-app/main/default/objects/litify_pm__Intake__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intakes (Employer)</relationshipLabel>
    <relationshipName>Intakes1</relationshipName>
    <type>Lookup</type>
</CustomField>