force-app/main/default/objects/litify_pm__Intake__c/fields/First_Treatment_Facility__c.field-meta.xml
<CustomField>
    <fullName>First_Treatment_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Treatment Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intakes (First Treatment Facility)</relationshipLabel>
    <relationshipName>IntakesQrfO</relationshipName>
    <type>Lookup</type>
</CustomField>