force-app/main/default/objects/litify_pm__Intake__c/fields/Flag_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag for Review</label>
    <type>Checkbox</type>
</CustomField>