force-app/main/default/objects/litify_pm__Intake__c/fields/Give_the_name_and_address_of_the_doctor__c.field-meta.xml
<CustomField>
    <fullName>Give_the_name_and_address_of_the_doctor__c</fullName>
    <label>Give the name and address of the doctor(</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>