force-app/main/default/objects/litify_pm__Intake__c/fields/Have_you_given_your_employer_or_supervi__c.field-meta.xml
<CustomField>
    <fullName>Have_you_given_your_employer_or_supervi__c</fullName>
    <label>Have you given your employer (or supervi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>