force-app/main/default/objects/litify_pm__Intake__c/fields/Have_you_Return_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Have_you_Return_to_Work__c</fullName>
    <label>Have you Return to Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>