force-app/main/default/objects/litify_pm__Intake__c/fields/How_did_the_injury_illness_happen__c.field-meta.xml
<CustomField>
    <fullName>How_did_the_injury_illness_happen__c</fullName>
    <label>How did the injury/illness happen?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>