force-app/main/default/objects/litify_pm__Intake__c/fields/How_often_are_you_paid__c.field-meta.xml
<CustomField>
    <fullName>How_often_are_you_paid__c</fullName>
    <label>How often are you paid?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>