force-app/main/default/objects/litify_pm__Intake__c/fields/If_Yes_Prior_Treating_Doctors_WCB__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Prior_Treating_Doctors_WCB__c</fullName>
    <label>If Yes, Prior Treating Doctors/ WCB#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>