force-app/main/default/objects/litify_pm__Intake__c/fields/If_yes_who_s_vehicle__c.field-meta.xml
<CustomField>
    <fullName>If_yes_who_s_vehicle__c</fullName>
    <label>If yes, who’s vehicle?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Your Vehicle</fullName>
            </value>
            <value>
                <fullName>Employer’s Vehicle</fullName>
            </value>
            <value>
                <fullName>Other Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>