force-app/main/default/objects/litify_pm__Intake__c/fields/If_yes_will_you_treated_by_the_doctor__c.field-meta.xml
<CustomField>
    <fullName>If_yes_will_you_treated_by_the_doctor__c</fullName>
    <label>If yes, will you treated by the doctor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>