force-app/main/default/objects/litify_pm__Intake__c/fields/If_you_returned_to_work_who_are_you_wor__c.field-meta.xml
<CustomField>
    <fullName>If_you_returned_to_work_who_are_you_wor__c</fullName>
    <label>If you returned to work, who are you wor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Employer</fullName>
            </value>
            <value>
                <fullName>New Employer</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>