force-app/main/default/objects/litify_pm__Intake__c/fields/In_what_form__c.field-meta.xml
<CustomField>
    <fullName>In_what_form__c</fullName>
    <label>In what form?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orally</fullName>
            </value>
            <value>
                <fullName>In writing</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>