force-app/main/default/objects/litify_pm__Intake__c/fields/In_what_form_did_you_get_that_payment__c.field-meta.xml
<CustomField>
    <fullName>In_what_form_did_you_get_that_payment__c</fullName>
    <label>Form of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Electronic Fund Transfer</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>