force-app/main/default/objects/litify_pm__Intake__c/fields/Incident_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date_Text__c</fullName>
    <description>Used for making Incident Date field searchable</description>
    <label>Incident Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>