force-app/main/default/objects/litify_pm__Intake__c/fields/Incident_History__c.field-meta.xml
<CustomField>
    <fullName>Incident_History__c</fullName>
    <label>Incident Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>