force-app/main/default/objects/litify_pm__Intake__c/fields/Incident_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Time__c</fullName>
    <label>Incident Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>