force-app/main/default/objects/litify_pm__Intake__c/fields/Incident_Witnesses__c.field-meta.xml
<CustomField>
    <fullName>Incident_Witnesses__c</fullName>
    <label>Incident Witnesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>