force-app/main/default/objects/litify_pm__Intake__c/fields/Is_there_a_fracture__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_fracture__c</fullName>
    <label>Is there a fracture?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>