force-app/main/default/objects/litify_pm__Intake__c/fields/Is_this_a_repetitive_stress_OD_case__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_repetitive_stress_OD_case__c</fullName>
    <label>Is this a repetitive stress/OD case?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>