force-app/main/default/objects/litify_pm__Intake__c/fields/Job_Duties__c.field-meta.xml
<CustomField>
    <fullName>Job_Duties__c</fullName>
    <label>Job Duties</label>
    <type>TextArea</type>
</CustomField>