force-app/main/default/objects/litify_pm__Intake__c/fields/Job_title_description__c.field-meta.xml
<CustomField>
    <fullName>Job_title_description__c</fullName>
    <label>Job Title/Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>