force-app/main/default/objects/litify_pm__Intake__c/fields/Location_of_the_accident__c.field-meta.xml
<CustomField>
    <fullName>Location_of_the_accident__c</fullName>
    <label>Location of the accident</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>