force-app/main/default/objects/litify_pm__Intake__c/fields/NOTICE_OF_CLAIM_NEEDED__c.field-meta.xml
<CustomField>
    <fullName>NOTICE_OF_CLAIM_NEEDED__c</fullName>
    <label>NOTICE OF CLAIM NEEDED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>