force-app/main/default/objects/litify_pm__Intake__c/fields/Object_involved_in_accident__c.field-meta.xml
<CustomField>
    <fullName>Object_involved_in_accident__c</fullName>
    <label>Object involved in accident</label>
    <length>255</length>
    <type>Text</type>
</CustomField>