force-app/main/default/objects/litify_pm__Intake__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Union</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intakes (Union)</relationshipLabel>
    <relationshipName>IntakesxMI0</relationshipName>
    <type>Lookup</type>
</CustomField>