force-app/main/default/objects/litify_pm__Intake__c/fields/PI_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>PI_Review_Comments__c</fullName>
    <label>PI Review - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>