force-app/main/default/objects/litify_pm__Intake__c/fields/PI_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>PI_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of attorney who reviewed whether there was a PI case</description>
    <label>PI Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intakes3</relationshipName>
    <type>Lookup</type>
</CustomField>