force-app/main/default/objects/litify_pm__Intake__c/fields/Police_report__c.field-meta.xml
<CustomField>
    <fullName>Police_report__c</fullName>
    <label>Police report #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>