force-app/main/default/objects/litify_pm__Intake__c/fields/Prior_Lawsuits__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lawsuits__c</fullName>
    <label>Prior Lawsuits?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>