force-app/main/default/objects/litify_pm__Intake__c/fields/Questionnaire_Status__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Status__c</fullName>
    <label>Questionnaire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed, Not Signed</fullName>
            </value>
            <value>
                <fullName>Completed, Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>