force-app/main/default/objects/litify_pm__Intake__c/fields/Return_To_Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_To_Work_Date__c</fullName>
    <label>Return To Work Date</label>
    <type>Date</type>
</CustomField>