force-app/main/default/objects/litify_pm__Intake__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <length>25</length>
    <type>Text</type>
</CustomField>