force-app/main/default/objects/litify_pm__Intake__c/fields/Stop_Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Stop_Work_Date__c</fullName>
    <label>Stop Work Date</label>
    <type>Date</type>
</CustomField>