force-app/main/default/objects/litify_pm__Intake__c/fields/Substitution_WC__c.field-meta.xml
<CustomField>
    <fullName>Substitution_WC__c</fullName>
    <label>Substitution? (WC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>