force-app/main/default/objects/litify_pm__Intake__c/fields/Supervisor_s_name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_name__c</fullName>
    <description>Supervisor&apos;s name</description>
    <label>Supervisor&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>