force-app/main/default/objects/litify_pm__Intake__c/fields/Taxi_Driver__c.field-meta.xml
<CustomField>
    <fullName>Taxi_Driver__c</fullName>
    <label>Taxi Driver?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>