force-app/main/default/objects/litify_pm__Intake__c/fields/Treatment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Summary__c</fullName>
    <label>Summary of Treatment to Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>