force-app/main/default/objects/litify_pm__Intake__c/fields/Was_the_Prior_Injury_work_related__c.field-meta.xml
<CustomField>
    <fullName>Was_the_Prior_Injury_work_related__c</fullName>
    <label>Was the Prior Injury work related?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>