force-app/main/default/objects/litify_pm__Intake__c/fields/Was_this_your_usual_work_location__c.field-meta.xml
<CustomField>
    <fullName>Was_this_your_usual_work_location__c</fullName>
    <label>Was this your usual work location?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>