force-app/main/default/objects/litify_pm__Intake__c/fields/Were_you_taken_from_the_site_in_an_ambul__c.field-meta.xml
<CustomField>
    <fullName>Were_you_taken_from_the_site_in_an_ambul__c</fullName>
    <label>Were you taken from the site in an ambul</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>