force-app/main/default/objects/litify_pm__Intake__c/fields/Were_you_treated_on_site__c.field-meta.xml
<CustomField>
    <fullName>Were_you_treated_on_site__c</fullName>
    <label>Were you treated on site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>