force-app/main/default/objects/litify_pm__Intake__c/fields/When_did_you_first_seek_treatment__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_first_seek_treatment__c</fullName>
    <label>First Treatment Date</label>
    <type>Date</type>
</CustomField>