force-app/main/default/objects/litify_pm__Intake__c/fields/Where_did_you_receive_your_first_off_sit__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_receive_your_first_off_sit__c</fullName>
    <label>Where did you receive your first off sit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None Received</fullName>
            </value>
            <value>
                <fullName>Emergency Room</fullName>
            </value>
            <value>
                <fullName>Doctor&apos;s office</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Hospital Stay over 24 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>