force-app/main/default/objects/litify_pm__Intake__c/fields/Who_did_you_give_notice_to__c.field-meta.xml
<CustomField>
    <fullName>Who_did_you_give_notice_to__c</fullName>
    <label>Who did you give notice to?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>