force-app/main/default/objects/litify_pm__Intake__c/fields/Work_Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Work_Comments_Notes__c</fullName>
    <label>Work Comments/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>